Atividades fechadas e abertas da unidade 1 finalizadas

--- a/atividades/ELT572_ATV1_Aberta.ipynb
+++ b/atividades/ELT572_ATV1_Aberta.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "WsCaDWG-RUaB"
@@ -10,7 +11,7 @@
         "### Questões abertas para Python Parte I\n",
         "\n",
         "**Aluna:** Carine Madeira Soares  \n",
-        "**Matrícula:** ES115044"
+        "**Instituição:** Universidade Federal de Viçosa"
       ]
     },
     {
