--- a/ELT572_U1A4.ipynb
+++ b/ELT572_U1A4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNKcdlFLLdr5GC7gWneaS3H",
+      "authorship_tag": "ABX9TyMZequrvbumoL7H7NBLyDVz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "1Crg6kHiTl_S"
       },
@@ -77,7 +77,7 @@
         "id": "GFsSeMgHWBV4",
         "outputId": "ba62d92a-d450-4a4f-f1a3-1039ee1af223"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
         "id": "ZOTK1Q16WXqf",
         "outputId": "734aa639-84e5-486b-9fce-6a2cb2ee406e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
         "id": "Jy6lDYWbWaiQ",
         "outputId": "c198420c-0cdf-47e4-9072-52fbc225b2c7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -147,7 +147,7 @@
       "metadata": {
         "id": "aXH9on_eWfx-"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,7 +163,7 @@
         "id": "xGsI98qoXAjN",
         "outputId": "b4868df5-ac7c-4387-b7b2-0ef4a3e3f0a1"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +199,7 @@
       "metadata": {
         "id": "lZ3TVmEUXS9X"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -215,7 +215,7 @@
         "id": "Hsp0Z8NyZWrk",
         "outputId": "539bfd9a-4450-44a4-c430-ed39d2d47ecf"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,7 +269,7 @@
       "metadata": {
         "id": "nwkJ-XvOZ5yR"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -281,7 +281,7 @@
       "metadata": {
         "id": "_GBuLs_hapZ8"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
         "id": "HlEQ9qiubWUX",
         "outputId": "feab87a3-827b-4ab3-dee3-65d22794a664"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,9 +308,106 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def ordernar(x, y):\n",
+        "  if x <= y:\n",
+        "    return x,y\n",
+        "  else:\n",
+        "    return y,x"
+      ],
+      "metadata": {
+        "id": "sPll4mwPaZDB"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = float(input('Entre com um valor: '))\n",
+        "b = float(input('Entre com um valor: '))\n",
+        "a, b = ordernar(a,b)\n",
+        "print(a,'<=',b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VGHPmD4EansQ",
+        "outputId": "c159c2a9-7d5a-496c-f20e-de30b5521186"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Entre com um valor: 20.1\n",
+            "Entre com um valor: 20\n",
+            "20.0 <= 20.1\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "#### 4.4 Definições locais e globais"
+        "#### 4.4 Função Recursiva"
+      ],
+      "metadata": {
+        "id": "VLSU8KmTbHFf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibonacci_recursiva(n):\n",
+        "  if n <=1:\n",
+        "    return n\n",
+        "  else:\n",
+        "    return (fibonacci_recursiva(n-1) + fibonacci_recursiva(n-2))"
+      ],
+      "metadata": {
+        "id": "THZXXI5ibMTk"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n_termos = 10\n",
+        "if n_termos <= 0:\n",
+        "  print('Entrada inválida! Informe um valor maior que zero.')\n",
+        "else:\n",
+        "  print('Serie Fibonacci...')\n",
+        "  for i in range(n_termos):\n",
+        "    print(fibonacci_recursiva(i), end=' ')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XfbqWhopbqDO",
+        "outputId": "dac5a4c5-bcd0-4616-8541-13850c67f2a5"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Serie Fibonacci...\n",
+            "0 1 1 2 3 5 8 13 21 34 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 4.5 Definições locais e globais"
       ],
       "metadata": {
         "id": "kkPfDWi7b0lW"
@@ -331,7 +428,7 @@
       "metadata": {
         "id": "075AJG_Xb9GV"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -350,7 +447,7 @@
         "id": "Fu2rSZoccVMa",
         "outputId": "08259aca-24bf-4598-8417-ac8826ef4874"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,7 +476,7 @@
       "metadata": {
         "id": "Z1rYIZ-Pcrho"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -395,7 +492,7 @@
         "id": "InyZ_feldA48",
         "outputId": "98a82384-c442-4f1b-d65a-374bd8bd344a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +517,7 @@
         "id": "Q4HdwkHYdQHW",
         "outputId": "648619c6-9861-48d6-87ca-04afde621229"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
