ELT574 - Semana 3 Adaline, Regra Delta e Perceptron

--- a/ELT574/Semana_02/ETL574_U2A1.ipynb
+++ b/ELT574/Semana_02/ETL574_U2A1.ipynb
@@ -61,7 +61,7 @@
     "from PIL import Image\n",
     "from IPython.display import display\n",
     "\n",
-    "print('Setup completo!')\n"
+    "print('Setup completo!')"
    ]
   },
   {
